--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
+  edge: true
   app: "docker-react"
   env: "DockerReact-env"
   bucket_name: "elasticbeanstalk-us-east-1-203301068892"
